tests/fail/d001_fnonce_double_call.dew
# D001: FnOnce closure called twice — captures affine Box
def b = box(99);
def reader = fn (x: Int) { unbox(b) };
reader(0) + reader(0)
